Added search app

--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Lottery</title>
+    <title>Search App</title>
+    <link rel="stylesheet" href="style.css" />
+    <script type="module" src="script.js"></script>
   </head>
   <body>
-    <main class="content">
-      <h2>Lottery</h2>
-      <button class="button-start-lottery">Start lottery drawing</button>
-      <div class="lottery-results">
-        <p class="winning-combination"></p>
-        <p class="winners-message"></p>
-        <ul class="winners"></ul>
-      </div>
+    <main>
+      <section class="section">
+        <h1 class="section__title">Search App</h1>
+        <input type="text" class="search-input" />
+        <p class="alert"></p>
+        <div class="grid"></div>
+      </section>
     </main>
-    <script type="module" src="script.js"></script>
   </body>
 </html>
